--- a/Resources/views/admin.html.twig
+++ b/Resources/views/admin.html.twig
@@ -30,4 +30,40 @@
   </div>
 
   <h2>{{ title }}</h2>
+
+  <table class="data">
+    <tr>
+      <th>User</th>
+      <th>Is active</th>
+      <th>Is admin</th>
+      <th>Remove</th>
+      <th>Edit</th>
+    </tr>
+
+    {% for user in users %}
+      <tr>
+        <td>{{ user.username }}</td>
+        <td>
+          {% if user.is_active %}
+            Yes
+          {% else %}
+            No
+          {% endif %}
+        </td>
+        <td>
+          {% if user.is_admin %}
+            Yes
+          {% else %}
+            No
+          {% endif %}
+        </td>
+        <td>
+          <a href="#">Remove</a>
+        </td>
+        <td>
+          <a href="#">Edit</a>
+        </td>
+      </tr>
+    {% endfor %}
+  </table>
 {% endblock %}
