Admin zone: implement remove action

--- a/Resources/views/admin.html.twig
+++ b/Resources/views/admin.html.twig
@@ -58,7 +58,8 @@
           {% endif %}
         </td>
         <td>
-          <a href="#">Remove</a>
+          <a href="{{ path('ucl_wkp_admin_remove_user', user.remove_route_data) }}"
+             onclick="return confirm ('Are you sure you want to remove the user &quot;{{ user.username }}&quot;?')">Remove</a>
         </td>
         <td>
           <a href="#">Edit</a>
