Admin zone: implement edit action

--- a/Resources/views/admin_user_list.html.twig
+++ b/Resources/views/admin_user_list.html.twig
@@ -60,12 +60,16 @@
           {% if user.id == auth_user_id %}
             Impossible
           {% else %}
-            <a href="{{ path('ucl_wkp_admin_remove_user', user.remove_route_data) }}"
+            <a href="{{ path('ucl_wkp_admin_remove_user', user.route_data) }}"
                onclick="return confirm ('Are you sure you want to remove the user &quot;{{ user.username }}&quot;?')">Remove</a>
           {% endif %}
         </td>
         <td>
-          <a href="#">Edit</a>
+          {% if user.id == auth_user_id %}
+            Impossible
+          {% else %}
+            <a href="{{ path('ucl_wkp_admin_edit_user', user.route_data) }}">Edit</a>
+          {% endif %}
         </td>
       </tr>
     {% endfor %}
