Admin zone: show logs by month

--- a/Resources/views/admin_log.html.twig
+++ b/Resources/views/admin_log.html.twig
@@ -22,6 +22,8 @@
 {% extends 'UCLWebKeyPassBundle::admin.html.twig' %}
 
 {% block contents %}
+  <h3>Log</h3>
+
   <table class="data">
     <tr>
       <th>Date</th>
