--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -42,6 +42,7 @@
         <li><a href="{{ path('ucl_wkp_admin_user_list') }}">Admin Zone</a></li>
       {% endif %}
 
+      <li><a href="{{ path('ucl_wkp_change_password') }}">Change Password</a></li>
       <li><a href="{{ path('ucl_wkp_logout') }}">Logout</a></li>
     </ul>
   </div>
