--- a/Resources/views/create_account_form.html.twig
+++ b/Resources/views/create_account_form.html.twig
@@ -22,33 +22,11 @@
 {% extends 'UCLWebKeyPassBundle::page.html.twig' %}
 
 {% block body %}
-  {% for flashMessage in app.session.flashbag.get('notice') %}
-    <div class="flash-notice">
-      {{ flashMessage }}
-    </div>
-  {% endfor %}
+  <h2>{{ title }}</h2>
 
-  {% if error %}
-    <div>{{ error.message }}</div>
-  {% endif %}
+  <form action="#" method="post" {{ form_enctype(form) }}>
+    {{ form_widget(form) }}
 
-  <form action="{{ path('ucl_wkp_login_check') }}" method="post">
-    <p>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="_username" value="{{ last_username }}" />
-    </p>
-
-    <p>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="_password" />
-    </p>
-
-    <p>
-      <button type="submit">Login</button>
-    </p>
+    <input type="submit" />
   </form>
-
-  <p>
-    <a href="{{ path('ucl_wkp_create_account') }}">Create a new account</a>
-  </p>
 {% endblock %}
