Admin zone: form to add the master key
The master key is directly encrypted with the private key of the admin
user.

--- a/Resources/views/admin.html.twig
+++ b/Resources/views/admin.html.twig
@@ -26,6 +26,7 @@
     <ul class="actions">
       <li><a href="{{ path('ucl_wkp_admin_user_list') }}">Users</a></li>
       <li><a href="{{ path('ucl_wkp_admin_log_months') }}">Log</a></li>
+      <li><a href="{{ path('ucl_wkp_admin_master_key') }}">Master Key</a></li>
       <li><a href="{{ path('ucl_wkp_root_view') }}">Quit Admin Zone</a></li>
       <li><a href="{{ path('ucl_wkp_logout') }}">Logout</a></li>
     </ul>
