--- a/Resources/views/page.html.twig
+++ b/Resources/views/page.html.twig
@@ -24,6 +24,10 @@
 <head>
 <title>UCL WebKeyPass - {{ title }}</title>
 <link href="{{ asset('bundles/uclwebkeypass/css/style.css') }}" type="text/css" rel="stylesheet" />
+
+{% block head %}
+{% endblock %}
+
 </head>
 
 <body>
