--- a/Resources/views/private_key_form.html.twig
+++ b/Resources/views/private_key_form.html.twig
@@ -24,6 +24,8 @@
 {% block body %}
   <h3>{{ action }}</h3>
 
+  <p>Without Shibboleth.</p>
+
   <form action="#" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
 
