Check Shibboleth private key: add error message

--- a/Resources/views/login.html.twig
+++ b/Resources/views/login.html.twig
@@ -28,6 +28,12 @@
     </div>
   {% endfor %}
 
+  {% for flashMessage in app.session.flashbag.get('error') %}
+    <div class="flash-error">
+      {{ flashMessage }}
+    </div>
+  {% endfor %}
+
   {% if error %}
     <div>{{ error.message }}</div>
   {% endif %}
