Forms: add cancel button

--- a/Resources/views/private_key_form.html.twig
+++ b/Resources/views/private_key_form.html.twig
@@ -30,5 +30,6 @@
     {{ form_widget(form) }}
 
     <input type="submit" />
+    <input type="button" value="Cancel" onClick="javascript: history.go(-1)">
   </form>
 {% endblock %}
