Session expiration after 10 minutes

--- a/Resources/views/page.html.twig
+++ b/Resources/views/page.html.twig
@@ -36,5 +36,11 @@
 {% block body %}
 {% endblock %}
 
+<!-- Session expiration -->
+<script language="javascript">
+  nb_minutes = 10;
+  window.setTimeout ("location=('{{ path('ucl_wkp_logout') }}');", nb_minutes * 60 * 1000);
+</script>
+
 </body>
 </html>
