--- a/Resources/views/admin.html.twig
+++ b/Resources/views/admin.html.twig
@@ -28,6 +28,7 @@
       <li><a href="{{ path('ucl_wkp_admin_log_months') }}">Log</a></li>
       <li><a href="{{ path('ucl_wkp_admin_master_key') }}">Master Key</a></li>
       <li><a href="{{ path('ucl_wkp_admin_show_icons') }}">Icons</a></li>
+      <li><a href="{{ path('ucl_wkp_admin_show_settings') }}">Settings</a></li>
       <li><a href="{{ path('ucl_wkp_root_view') }}">Quit Admin Zone</a></li>
       <li><a href="{{ path('ucl_wkp_logout') }}">Logout</a></li>
     </ul>
