Fix the display of the message on automatic logout

--- a/Resources/views/login.html.twig
+++ b/Resources/views/login.html.twig
@@ -19,9 +19,16 @@
  # Author: Sébastien Wilmet
  #}
 
-{% extends 'UCLWebKeyPassBundle::page.html.twig' %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>UCL WebKeyPass - {{ title }}</title>
+<link href="{{ asset('bundles/uclwebkeypass/css/style.css') }}" type="text/css" rel="stylesheet" />
+</head>
 
-{% block body %}
+<body>
+  <h1>UCL WebKeyPass</h1>
+
   {% for flashMessage in app.session.flashbag.get('notice') %}
     <div class="flash-notice">
       {{ flashMessage }}
@@ -59,4 +66,5 @@
       <a href="{{ path('ucl_wkp_create_account') }}">Create a new account</a>
     </p>
   {% endif %}
-{% endblock %}
+</body>
+</html>
