--- a/Resources/views/node.html.twig
+++ b/Resources/views/node.html.twig
@@ -49,7 +49,7 @@
     {% for info in infos %}
       <tr>
         <td>{{ info.title }}</td>
-        <td>{{ info.content }}</td>
+        <td>{{ info.content | raw }}</td>
       </tr>
     {% endfor %}
 
