Admin zone: import form

--- a/Resources/views/admin.html.twig
+++ b/Resources/views/admin.html.twig
@@ -30,6 +30,7 @@
       <li><a href="{{ path('ucl_wkp_admin_show_icons') }}">Icons</a></li>
       <li><a href="{{ path('ucl_wkp_admin_show_settings') }}">Settings</a></li>
       <li><a href="{{ path('ucl_wkp_admin_export') }}">Export</a></li>
+      <li><a href="{{ path('ucl_wkp_admin_import') }}">Import</a></li>
       <li><a href="{{ path('ucl_wkp_root_view') }}">Quit Admin Zone</a></li>
       <li><a href="{{ path('ucl_wkp_logout') }}">Logout</a></li>
     </ul>
