Authentication with Shibboleth: no user/password required
On the login page, there is a link to authenticate with Shibboleth.

--- a/Resources/views/login.html.twig
+++ b/Resources/views/login.html.twig
@@ -66,5 +66,9 @@
       <a href="{{ path('ucl_wkp_create_account') }}">Create a new account</a>
     </p>
   {% endif %}
+
+  <p>
+    <a href="{{ path('ucl_wkp_login_with_shibboleth') }}">Authentication with Shibboleth</a>
+  </p>
 </body>
 </html>
